# surrealdb-ipc

./: Cargo.toml
lib/examples/named_pipes/: Cargo.toml
lib/examples/named_pipes/src/: main.rs
lib/examples/unix_sockets/: Cargo.toml
lib/examples/unix_sockets/src/: main.rs
